--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,11 @@
     <string name="app_name">Contacts</string>
     <string name="enter_phone_number">Enter phone number..</string>
     <string name="enter_address">Enter address..</string>
-    <string name="enter_lastname">Enter lastname..</string>
+    <string name="enter_lastname">Enter last name..</string>
     <string name="enter_name">Enter name..</string>
     <string name="add">Add</string>
+    <string name="toast_fill_all_fields">Please fill all fields</string>
+    <string name="text_space" />
+
+    />
 </resources>
