--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="enter_address">Enter address..</string>
     <string name="enter_lastname">Enter last name..</string>
     <string name="enter_name">Enter name..</string>
-    <string name="add">Add</string>
-    <string name="toast_fill_all_fields">Please fill all fields</string>
+    <string name="save">Save</string>
+    <string name="toast_add_contact">Please, enter name and phone number!</string>
+    <string name="edit">Edit</string>
+    <string name="enter_email_address">Enter Email address…</string>
 </resources>
