--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="edit">Edit</string>
     <string name="enter_email_address">Enter Email address…</string>
     <string name="delete">delete</string>
+    <string name="search_title">Search</string>
+    <string name="search_hint">Search contacts..</string>
 </resources>
